<resources>
    <string name="app_name">ITVbox</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="play_store">Play Store</string>
    <string name="apps">Apps</string>
    <string name="youtube">Youtube</string>
    <string name="website">Apps</string>
    <string name="file_manager">File Manager</string>
    <string name="settings">Settings</string>
    <string name="back_btn">Back</string>
    <string name="ten_seconds">5 Giây</string>
    <string name="thirty_seconds">10 Giây</string>
    <string name="two_minus">20 Giây</string>
    <string name="five_minus">1 Phút</string>
    <string name="ten_minus">Dừng</string>
    <string name="show_full_image">Show full images</string>
    <string name="set_speed_of_image_view">Cài đặt tốc độ chuyển ảnh</string>
    <string name="yes_dialog_string">Ok</string>
    <string name="no_dialog_string">No</string>
    <string name="cancel_dialog_string">Cancel</string>
    <string name="title_page_four">XEM TRUYỀN HÌNH TRỰC TUYẾN</string>
    <string name="entertaiment_title_tv">Giải Trí</string>
    <string name="news_title_tv">Tin tức</string>
    <string name="education_title_tv">Giáo dục</string>
    <string name="others_title_tv">Khác</string>
    <string name="choose_categories">Chọn ứng dụng:</string>
    <string name="no_app_in_list">"Không có ứng dụng nào trong danh sách này.
 Ấn + để thêm ứng dụng."</string>
    <string name="normal_line_tv">Kênh phổ thông</string>
    <string name="cap_line_tv">Kênh TH cáp</string>
    <string name="worl_line_tv">Kênh quốc tế</string>
    <string name="youtube_line_tv">Giải trí-Hài</string>
    <string name="foolbal_online_tv">Bóng đá trực tuyến</string>
    <string name="start_galary_page_one">Start</string>
    <string name="edit_galary_page_one">Edit</string>
    <string name="choose_album_galary_page_one">Choose Album</string>
    <string name="full_screen_page_one">Full Screen</string>
    <string name="loading">Loading....</string>
    <string name="loading_video_display">Loading the youtube video from the Internet, please wait</string>
    <string name="try_again">Try again</string>
    <string name="quit_question">Do you want to quit the MXPlayer application?</string>
    <string name="quit_ansert">Quit</string>
    <string name="searching">Tìm Kiếm Kênh</string>
    <string name="search_from_int">Đang tìm kiếm kênh từ Internet</string>
    <string name="file_mana_warning">Please install ES File Explorer File Manager to use this function</string>
    <string name="setting_warning">Thiết bị không có phần mềm Cài đặt.</string>
    <string name="app_in_list">This application is already in the list.</string>
    <string name="choose_app_to_the_list">Choose below application to add to the list</string>
    <string name="web_save_warning">Please input the website link before click Save button</string>
    <string name="add_web">Add Website Link</string>
    <string name="time_fb">Time:</string>
    <string name="vs">vs</string>
    <string name="enable_wifi_page_two">Please enable WIFI to connect to Internet</string>
    <string name="error_canot_get_fb">Something error, can not get the football information</string>
    <string name="error_canot_get_tv">Something error, can not get the tivi channel information</string>
    <string name="error_canot_get_yt">Something error, can not get the youtube information</string>
</resources>
